Create Movie page and Add routes

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,7 @@
 {% include 'layout.html'%}
+<title>
+    MovieFusion
+</title>
 
 <body>
     <!--==Scroll-Progress-bar=========================-->
@@ -69,7 +72,9 @@
                                 <div class="category-rating">
                                     <!--category-->
                                     <div class="category">
-                                        <a href="#">Horror</a>,<a href="#">Mistery</a>,<a href="#">Thriller</a>
+                                        <a href="#">Horror</a>
+                                        <a href="#">Mistery</a>
+                                        <a href="#">Thriller</a>
                                     </div>
                                     <!--rating--->
                                     <div class="rating">
@@ -86,7 +91,8 @@
                     <!--box------------------->
                     <div class="main-slider-box">
                         <!--overlayer-------->
-                        <a href="movie-page.html" class="main-slider-overlay">
+                        <a href="{{ url_for('main.movie', movie_name='Pirates of the Caribbean: Salazar\'s Revenge') }}"
+                            class="main-slider-overlay">
                             <i class="fas fa-play"></i>
                         </a>
                         <!--img----------->
@@ -102,13 +108,17 @@
                                 <!--name----->
                                 <div class="movie-name">
                                     <span>2017</span>
-                                    <a href="movie-page.html">Pirates of the Caribbean: Salazar's Revenge</a>
+                                    <a
+                                        href="{{ url_for('main.movie', movie_name='Pirates of the Caribbean: Salazar\'s Revenge') }}">Pirates
+                                        of the Caribbean: Salazar's Revenge</a>
                                 </div>
                                 <!--Category-and-rating---->
                                 <div class="category-rating">
                                     <!--category-->
                                     <div class="category">
-                                        <a href="#">Horror</a>,<a href="#">Mistery</a>,<a href="#">Thriller</a>
+                                        <a href="#">Horror</a>
+                                        <a href="#">Mistery</a>
+                                        <a href="#">Thriller</a>
                                     </div>
                                     <!--rating--->
                                     <div class="rating">
@@ -147,7 +157,9 @@
                                 <div class="category-rating">
                                     <!--category-->
                                     <div class="category">
-                                        <a href="#">Horror</a>,<a href="#">Mistery</a>,<a href="#">Thriller</a>
+                                        <a href="#">Horror</a>
+                                        <a href="#">Mistery</a>
+                                        <a href="#">Thriller</a>
                                     </div>
                                     <!--rating--->
                                     <div class="rating">
@@ -186,7 +198,9 @@
                                 <div class="category-rating">
                                     <!--category-->
                                     <div class="category">
-                                        <a href="#">Horror</a>,<a href="#">Mistery</a>,<a href="#">Thriller</a>
+                                        <a href="#">Horror</a>
+                                        <a href="#">Mistery</a>
+                                        <a href="#">Thriller</a>
                                     </div>
                                     <!--rating--->
                                     <div class="rating">
@@ -225,7 +239,9 @@
                                 <div class="category-rating">
                                     <!--category-->
                                     <div class="category">
-                                        <a href="#">Horror</a>,<a href="#">Mistery</a>,<a href="#">Thriller</a>
+                                        <a href="#">Horror</a>
+                                        <a href="#">Mistery</a>
+                                        <a href="#">Thriller</a>
                                     </div>
                                     <!--rating--->
                                     <div class="rating">
@@ -264,7 +280,9 @@
                                 <div class="category-rating">
                                     <!--category-->
                                     <div class="category">
-                                        <a href="#">Horror</a>,<a href="#">Mistery</a>,<a href="#">Thriller</a>
+                                        <a href="#">Horror</a>
+                                        <a href="#">Mistery</a>
+                                        <a href="#">Thriller</a>
                                     </div>
                                     <!--rating--->
                                     <div class="rating">
@@ -315,7 +333,9 @@
                         <div class="category-rating">
                             <!--category-->
                             <div class="category">
-                                <a href="#">Horror</a>,<a href="#">Mistery</a>,<a href="#">Thriller</a>
+                                <a href="#">Horror</a>
+                                <a href="#">Mistery</a>
+                                <a href="#">Thriller</a>
                             </div>
                             <!--rating--->
                             <div class="rating">
@@ -346,7 +366,9 @@
                         <div class="category-rating">
                             <!--category-->
                             <div class="category">
-                                <a href="#">Horror</a>,<a href="#">Mistery</a>,<a href="#">Thriller</a>
+                                <a href="#">Horror</a>
+                                <a href="#">Mistery</a>
+                                <a href="#">Thriller</a>
                             </div>
                             <!--rating--->
                             <div class="rating">
@@ -377,7 +399,9 @@
                         <div class="category-rating">
                             <!--category-->
                             <div class="category">
-                                <a href="#">Horror</a>,<a href="#">Mistery</a>,<a href="#">Thriller</a>
+                                <a href="#">Horror</a>
+                                <a href="#">Mistery</a>
+                                <a href="#">Thriller</a>
                             </div>
                             <!--rating--->
                             <div class="rating">
@@ -408,7 +432,9 @@
                         <div class="category-rating">
                             <!--category-->
                             <div class="category">
-                                <a href="#">Horror</a>,<a href="#">Mistery</a>,<a href="#">Thriller</a>
+                                <a href="#">Horror</a>
+                                <a href="#">Mistery</a>
+                                <a href="#">Thriller</a>
                             </div>
                             <!--rating--->
                             <div class="rating">
@@ -439,7 +465,9 @@
                         <div class="category-rating">
                             <!--category-->
                             <div class="category">
-                                <a href="#">Horror</a>,<a href="#">Mistery</a>,<a href="#">Thriller</a>
+                                <a href="#">Horror</a>
+                                <a href="#">Mistery</a>
+                                <a href="#">Thriller</a>
                             </div>
                             <!--rating--->
                             <div class="rating">
@@ -470,7 +498,9 @@
                         <div class="category-rating">
                             <!--category-->
                             <div class="category">
-                                <a href="#">Horror</a>,<a href="#">Mistery</a>,<a href="#">Thriller</a>
+                                <a href="#">Horror</a>
+                                <a href="#">Mistery</a>
+                                <a href="#">Thriller</a>
                             </div>
                             <!--rating--->
                             <div class="rating">
@@ -501,7 +531,9 @@
                         <div class="category-rating">
                             <!--category-->
                             <div class="category">
-                                <a href="#">Horror</a>,<a href="#">Mistery</a>,<a href="#">Thriller</a>
+                                <a href="#">Horror</a>
+                                <a href="#">Mistery</a>
+                                <a href="#">Thriller</a>
                             </div>
                             <!--rating--->
                             <div class="rating">
@@ -532,7 +564,9 @@
                         <div class="category-rating">
                             <!--category-->
                             <div class="category">
-                                <a href="#">Horror</a>,<a href="#">Mistery</a>,<a href="#">Thriller</a>
+                                <a href="#">Horror</a>
+                                <a href="#">Mistery</a>
+                                <a href="#">Thriller</a>
                             </div>
                             <!--rating--->
                             <div class="rating">
@@ -563,7 +597,9 @@
                         <div class="category-rating">
                             <!--category-->
                             <div class="category">
-                                <a href="#">Horror</a>,<a href="#">Mistery</a>,<a href="#">Thriller</a>
+                                <a href="#">Horror</a>
+                                <a href="#">Mistery</a>
+                                <a href="#">Thriller</a>
                             </div>
                             <!--rating--->
                             <div class="rating">
@@ -594,7 +630,9 @@
                         <div class="category-rating">
                             <!--category-->
                             <div class="category">
-                                <a href="#">Horror</a>,<a href="#">Mistery</a>,<a href="#">Thriller</a>
+                                <a href="#">Horror</a>
+                                <a href="#">Mistery</a>
+                                <a href="#">Thriller</a>
                             </div>
                             <!--rating--->
                             <div class="rating">
@@ -625,7 +663,9 @@
                         <div class="category-rating">
                             <!--category-->
                             <div class="category">
-                                <a href="#">Horror</a>,<a href="#">Mistery</a>,<a href="#">Thriller</a>
+                                <a href="#">Horror</a>
+                                <a href="#">Mistery</a>
+                                <a href="#">Thriller</a>
                             </div>
                             <!--rating--->
                             <div class="rating">
@@ -656,7 +696,9 @@
                         <div class="category-rating">
                             <!--category-->
                             <div class="category">
-                                <a href="#">Horror</a>,<a href="#">Mistery</a>,<a href="#">Thriller</a>
+                                <a href="#">Horror</a>
+                                <a href="#">Mistery</a>
+                                <a href="#">Thriller</a>
                             </div>
                             <!--rating--->
                             <div class="rating">
