--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -222,7 +222,7 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: center;
+    object-position: top;
 }
 
 .main-slider-text {
