--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -45,59 +45,18 @@
         <!-- Swiper -->
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
-                <!--1------------------------------------------>
+                {% for movie in movies %}
                 <div class="swiper-slide">
                     <!--box------------------->
                     <div class="main-slider-box">
                         <!--overlayer-------->
-                        <a href="#" class="main-slider-overlay">
-                            <i class="fas fa-play"></i>
-                        </a>
-                        <!--img----------->
-                        <div class="main-slider-img">
-                            <img alt="Poster" src="{{ url_for('static', filename='images/p-1.jpg') }}" />
-                        </div>
-                        <!--text---------->
-                        <div class="main-slider-text">
-                            <!--quality----->
-                            <span class="quality">Full HD</span>
-                            <!--bottom-text-->
-                            <div class="bottom-text">
-                                <!--name----->
-                                <div class="movie-name">
-                                    <span>2014</span>
-                                    <a href="#">Paranormal Activity: The Marked Ones</strong>
-                                </div>
-                                <!--Category-and-rating---->
-                                <div class="category-rating">
-                                    <!--category-->
-                                    <div class="category">
-                                        <a href="#">Horror</a>
-                                        <a href="#">Mistery</a>
-                                        <a href="#">Thriller</a>
-                                    </div>
-                                    <!--rating--->
-                                    <div class="rating">
-                                        5.2 <img alt="imbd"
-                                            src="{{ url_for('static', filename='images/IMDb-icon.png') }}" />
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!--2------------------------------------------>
-                <div class="swiper-slide">
-                    <!--box------------------->
-                    <div class="main-slider-box">
-                        <!--overlayer-------->
-                        <a href="{{ url_for('movie.movie', movie_name='Pirates of the Caribbean: Salazar\'s Revenge'|url_slug) }}"
+                        <a href="{{ url_for('movie.movie', movie_name=movie['title']|url_slug) }}"
                             class="main-slider-overlay">
                             <i class="fas fa-play"></i>
                         </a>
                         <!--img----------->
                         <div class="main-slider-img">
-                            <img alt="Poster" src="{{ url_for('static', filename='images/p-2.jpg') }}" />
+                            <img alt="Poster" src="http://image.tmdb.org/t/p/w780{{ movie['poster_path'] }}" />
                         </div>
                         <!--text---------->
                         <div class="main-slider-text">
@@ -107,22 +66,26 @@
                             <div class="bottom-text">
                                 <!--name----->
                                 <div class="movie-name">
-                                    <span>2017</span>
-                                    <a
-                                        href="{{ url_for('movie.movie', movie_name='Pirates of the Caribbean: Salazar\'s Revenge') }}">Pirates
-                                        of the Caribbean: Salazar's Revenge</a>
+                                    <span>{{ movie['release_year'] }}</span>
+                                    <a href="{{ url_for('movie.movie', movie_name=movie['title']|url_slug) }}">
+                                        {{movie['title']}}
+                                    </a>
                                 </div>
                                 <!--Category-and-rating---->
                                 <div class="category-rating">
                                     <!--category-->
                                     <div class="category">
-                                        <a href="#">Horror</a>
-                                        <a href="#">Mistery</a>
-                                        <a href="#">Thriller</a>
+                                        <strong>Category</strong><br />
+                                        {% if movie['genres'] %}
+                                        {% for genre in movie['genres']%}
+                                        <a href="#">{{ genre['name'] }}</a>
+                                        {% endfor %}
+                                        {% endif %}
                                     </div>
                                     <!--rating--->
                                     <div class="rating">
-                                        5.2 <img alt="imbd"
+                                        {{ '%.1f' % movie['vote_average'] }}
+                                        <img alt="imbd"
                                             src="{{ url_for('static', filename='images/IMDb-icon.png') }}" />
                                     </div>
                                 </div>
@@ -130,173 +93,9 @@
                         </div>
                     </div>
                 </div>
-                <!--3------------------------------------------>
-                <div class="swiper-slide">
-                    <!--box------------------->
-                    <div class="main-slider-box">
-                        <!--overlayer-------->
-                        <a href="#" class="main-slider-overlay">
-                            <i class="fas fa-play"></i>
-                        </a>
-                        <!--img----------->
-                        <div class="main-slider-img">
-                            <img alt="Poster" src="{{ url_for('static', filename='images/p-3.jpg') }}" />
-                        </div>
-                        <!--text---------->
-                        <div class="main-slider-text">
-                            <!--quality----->
-                            <span class="quality">Full HD</span>
-                            <!--bottom-text-->
-                            <div class="bottom-text">
-                                <!--name----->
-                                <div class="movie-name">
-                                    <span>2020</span>
-                                    <a href="#">BloodShot</a>
-                                </div>
-                                <!--Category-and-rating---->
-                                <div class="category-rating">
-                                    <!--category-->
-                                    <div class="category">
-                                        <a href="#">Horror</a>
-                                        <a href="#">Mistery</a>
-                                        <a href="#">Thriller</a>
-                                    </div>
-                                    <!--rating--->
-                                    <div class="rating">
-                                        5.2 <img alt="imbd"
-                                            src="{{ url_for('static', filename='images/IMDb-icon.png') }}" />
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!--4------------------------------------------>
-                <div class="swiper-slide">
-                    <!--box------------------->
-                    <div class="main-slider-box">
-                        <!--overlayer-------->
-                        <a href="#" class="main-slider-overlay">
-                            <i class="fas fa-play"></i>
-                        </a>
-                        <!--img----------->
-                        <div class="main-slider-img">
-                            <img alt="Poster" src="{{ url_for('static', filename='images/p-4.jpg') }}" />
-                        </div>
-                        <!--text---------->
-                        <div class="main-slider-text">
-                            <!--quality----->
-                            <span class="quality">Full HD</span>
-                            <!--bottom-text-->
-                            <div class="bottom-text">
-                                <!--name----->
-                                <div class="movie-name">
-                                    <span>2021</span>
-                                    <a href="#">Venom: Let There Be Carnage</a>
-                                </div>
-                                <!--Category-and-rating---->
-                                <div class="category-rating">
-                                    <!--category-->
-                                    <div class="category">
-                                        <a href="#">Horror</a>
-                                        <a href="#">Mistery</a>
-                                        <a href="#">Thriller</a>
-                                    </div>
-                                    <!--rating--->
-                                    <div class="rating">
-                                        5.2 <img alt="imbd"
-                                            src="{{ url_for('static', filename='images/IMDb-icon.png') }}" />
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!--5------------------------------------------>
-                <div class="swiper-slide">
-                    <!--box------------------->
-                    <div class="main-slider-box">
-                        <!--overlayer-------->
-                        <a href="#" class="main-slider-overlay">
-                            <i class="fas fa-play"></i>
-                        </a>
-                        <!--img----------->
-                        <div class="main-slider-img">
-                            <img alt="Poster" src="{{ url_for('static', filename='images/p-5.jpg') }}" />
-                        </div>
-                        <!--text---------->
-                        <div class="main-slider-text">
-                            <!--quality----->
-                            <span class="quality">Full HD</span>
-                            <!--bottom-text-->
-                            <div class="bottom-text">
-                                <!--name----->
-                                <div class="movie-name">
-                                    <span>2018</span>
-                                    <a href="#">Deadpool 2</a>
-                                </div>
-                                <!--Category-and-rating---->
-                                <div class="category-rating">
-                                    <!--category-->
-                                    <div class="category">
-                                        <a href="#">Horror</a>
-                                        <a href="#">Mistery</a>
-                                        <a href="#">Thriller</a>
-                                    </div>
-                                    <!--rating--->
-                                    <div class="rating">
-                                        5.2 <img alt="imbd"
-                                            src="{{ url_for('static', filename='images/IMDb-icon.png') }}" />
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!--6------------------------------------------>
-                <div class="swiper-slide">
-                    <!--box------------------->
-                    <div class="main-slider-box">
-                        <!--overlayer-------->
-                        <a href="#" class="main-slider-overlay">
-                            <i class="fas fa-play"></i>
-                        </a>
-                        <!--img----------->
-                        <div class="main-slider-img">
-                            <img alt="Poster" src="{{ url_for('static', filename='images/p-6.jpg') }}" />
-                        </div>
-                        <!--text---------->
-                        <div class="main-slider-text">
-                            <!--quality----->
-                            <span class="quality">Full HD</span>
-                            <!--bottom-text-->
-                            <div class="bottom-text">
-                                <!--name----->
-                                <div class="movie-name">
-                                    <span>2021</span>
-                                    <a href="#">Black Widow</a>
-                                </div>
-                                <!--Category-and-rating---->
-                                <div class="category-rating">
-                                    <!--category-->
-                                    <div class="category">
-                                        <a href="#">Horror</a>
-                                        <a href="#">Mistery</a>
-                                        <a href="#">Thriller</a>
-                                    </div>
-                                    <!--rating--->
-                                    <div class="rating">
-                                        5.2 <img alt="imbd"
-                                            src="{{ url_for('static', filename='images/IMDb-icon.png') }}" />
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                {% endfor %}
             </div>
         </div>
-
     </section>
     <!--btns-------------------->
     <div class="slider-btns">
