Update movie.html, helper.py, and main.py with latest changes

--- a/app/templates/movie.html
+++ b/app/templates/movie.html
@@ -57,7 +57,8 @@
                         <span class="quality">Full HD</span>
                         <div class="rating">
                             {{ '%.1f' % movie['vote_average']}}
-                            <img alt="imbd" src="{{ url_for('static', filename='images/IMDb-icon.png') }}" />
+                            <img alt="tmbd"
+                                src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_square_1-5bdc75aaebeb75dc7ae79426ddd9be3b2be1e342510f8202baf6bffa71d7f5c4.svg" />
                         </div>
                         <span>{{movie['release']}}</span>
                         {% if movie['runtime'] < 60 %} <span>
