Update .gitignore and templates with new files and links

--- a/app/templates/movie.html
+++ b/app/templates/movie.html
@@ -19,7 +19,7 @@
         </a>
         <!--menu------------------->
         <ul class="menu">
-            <li><a href="#">Home</a></li>
+            <li><a href="{{url_for('main.index')}}">Home</a></li>
             <li><a href="#">Genre</a></li>
             <li><a href="#">Account</a></li>
             <li><a href="#">Contact</a></li>
