--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -375,13 +375,13 @@ body {
 .post-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap: 35px;
+    grid-gap: 25px;
     margin: 20px 0px;
 }
 
 .post-box {
     width: 100%;
-    height: 550px;
+    height: 450px;
     overflow: hidden;
     background-color: #0e0e0ec2;
     border: 1px solid #161616b9;
@@ -399,6 +399,11 @@ body {
     height: 100%;
     object-position: top center;
     object-fit: cover;
+    transition: transform 0.4s ease-in-out;
+}
+
+.post-box:hover .post-img img {
+    transform: scale(1.05);
 }
 
 .main-slider-text .movie-name a:hover {
