--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -646,6 +646,49 @@ footer .logo {
     object-position: top;
 }
 
+/*==Trailer-section==================*/
+@keyframes fadeInSlideDown {
+    0% {
+        opacity: 0;
+        transform: translateY(-20%);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes fadeOutSlideUp {
+    0% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+
+    100% {
+        opacity: 0;
+        transform: translateY(-20%);
+    }
+}
+
+#trailer-section {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    margin: 50px;
+    opacity: 0;
+    transform: translateY(-20%);
+}
+
+#trailer-section.visible {
+    display: flex;
+    animation: fadeInSlideDown 0.3s forwards;
+}
+
+#trailer-section.hidden {
+    animation: fadeOutSlideUp 0.3s forwards;
+}
+
 .banner-container {
     z-index: 100;
     display: grid;
