--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -41,41 +41,43 @@
         <!--container------->
         <div class="post-container">
             {% for movie in search_result %}
-            <div class="post-box">
-                <!--img-->
-                <div class="post-img">
-                    <img alt="" src="http://image.tmdb.org/t/p/w780{{ movie['poster_path'] }}" />
-                </div>
-                <!--text---------->
-                <div class="main-slider-text">
-                    <!--quality----->
-                    <span class="quality">Full HD</span>
-                    <!--bottom-text-->
-                    <div class="bottom-text">
-                        <!--name----->
-                        <div class="movie-name">
-                            <span>{{ movie['release_year'] }}</span>
-                            <a href="{{ url_for('movie.movie', movie_name=movie['title']|url_slug) }}">
-                                {{movie['title']}}
-                            </a>
-                        </div>
-                        <!--Category-and-rating---->
-                        <div class="category-rating">
-                            <!--category-->
-                            <div class="category">
-                                {% if movie.get('genres') %}
-                                {% for genre in movie['genres']%}
-                                <a href="{{url_for('category.category', genre_name=genre['name']|url_slug)}}">{{
-                                    genre['name']
-                                    }}</a>
-                                {% endfor %}
-                                {% endif %}
+            <div class="movie-poster">
+                <div class="post-box">
+                    <!--img-->
+                    <div class="post-img">
+                        <img alt="" src="http://image.tmdb.org/t/p/w780{{ movie['poster_path'] }}" />
+                    </div>
+                    <!--text---------->
+                    <div class="main-slider-text">
+                        <!--quality----->
+                        <span class="quality">Full HD</span>
+                        <!--bottom-text-->
+                        <div class="bottom-text">
+                            <!--name----->
+                            <div class="movie-name">
+                                <span>{{ movie.get('release_date',"")[:4] }}</span>
+                                <a href="{{ url_for('movie.movie', movie_name=movie['title']|url_slug) }}">
+                                    {{movie['title']}}
+                                </a>
                             </div>
-                            <!--rating--->
-                            <div class="rating">
-                                {{ '%.1f' % movie['vote_average'] }}
-                                <img alt="tmbd"
-                                    src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_square_1-5bdc75aaebeb75dc7ae79426ddd9be3b2be1e342510f8202baf6bffa71d7f5c4.svg" />
+                            <!--Category-and-rating---->
+                            <div class="category-rating">
+                                <!--category-->
+                                <div class="category">
+                                    {% if movie.get('genres') %}
+                                    {% for genre in movie['genres']%}
+                                    <a href="{{url_for('category.category', genre_name=genre['name']|url_slug)}}">{{
+                                        genre['name']
+                                        }}</a>
+                                    {% endfor %}
+                                    {% endif %}
+                                </div>
+                                <!--rating--->
+                                <div class="rating">
+                                    {{ '%.1f' % movie['vote_average'] }}
+                                    <img alt="tmbd"
+                                        src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_square_1-5bdc75aaebeb75dc7ae79426ddd9be3b2be1e342510f8202baf6bffa71d7f5c4.svg" />
+                                </div>
                             </div>
                         </div>
                     </div>
